--- a/Data-importer/Client/index.html
+++ b/Data-importer/Client/index.html
@@ -270,7 +270,7 @@
             </div>
             <div class="form-group">
                 <label for="neo4j-password">Neo4j Password:</label>
-                <input type="password" id="neo4j-password" placeholder="Enter Neo4j password" value="">
+                <input type="password" id="neo4j-password" placeholder="Enter Neo4j password" value="123456789">
             </div>
             <div class="form-group">
                 <label for="neo4j-database">Neo4j Database:</label>
@@ -295,7 +295,7 @@
             </div>
             <div class="form-group">
                 <label for="postgis-password">PostGIS Password:</label>
-                <input type="password" id="postgis-password" placeholder="Enter PostGIS password" value="">
+                <input type="password" id="postgis-password" placeholder="Enter PostGIS password" value="981031">
             </div>
             <div class="form-group">
                 <label for="postgis-database">PostGIS Database:</label>
