--- a/Data-importer/Client/index.html
+++ b/Data-importer/Client/index.html
@@ -325,7 +325,7 @@
                 </select>
             </div>
             <div class="form-group" style="flex: 2;">
-                <label for="entity-class">Entity Class (Table Name / Node Label):</label>
+                <label for="entity-class">Entity Label (Table Name / Node Label):</label>
                 <input type="text" id="entity-class"
                        placeholder="Table name in the RDBMS and related GDBMS node label">
             </div>
